\preformatted{    R CMD Stangle --options='output="stdout"' foo.Rnw > foo2.R}

      \item There is a new option \code{pdf.compress} controlling
      whether PDF figures are generated using Flate compression (they
      are by default).

      \item \command{R CMD Sweave} now has a \option{--pdf} option to
      produce a PDF version of the processed Sweave document.
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item Function \code{R_tmpnam2} has been added to the API to allow
      a temporary filename to include a specified extension.
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item Package \file{DESCRIPTION} file field \samp{KeepSource}
      forces the package to be installed with \code{keep.source =
	TRUE} (or \code{FALSE}).  (Suggestion of Greg Snow.  Note that
      as all packages are lazy-loaded, this is now only relevant at
      installation.)

      There are corresponding options \option{--with-keep.source} and
      \option{--without-keep.source} for \command{R CMD INSTALL}.

      \item \command{R CMD INSTALL} has a new option
      \option{--byte-compile} to byte-compile the packages during
      installation (since all packages are now lazy-loaded).  This can
      be controlled on a per-package basis by the optional field
      \samp{ByteCompile} in the \file{DESCRIPTION} file.

      \item A package \R code but without a \file{NAMESPACE} file will
      have a default one created at \command{R CMD build} or \command{R
      CMD INSTALL} time, so all packages will be installed with
      namespaces.  A consequence of this is that \code{.First.lib()}
      functions need to be copied to \code{.onLoad()} (usually) or
      \code{.onAttach()}.  For the time being, if no \code{.onLoad()}
      nor \code{.onAttach()} function is found but \code{.First.lib()}
      is, it will be run as the attach hook (unless one of a list of
      known exceptions, when it will be run as the load hook).
      